# voicevox-synthesizer

./: .gitignore  CMakeLists.txt  README.md  deps.sh
src/: main.cpp
